# employee-md

./: .dockerignore  .editorconfig  .employe-validatorrc.example  .env.example  .gitignore  .pre-commit-config.yaml  .replit  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INTEGRATION.md  LICENSE  MANIFEST.in  Makefile  PROMPT.md  README.md  SECURITY.md  config.yaml.example  employee.md  pyproject.toml  replit.md  requirements-dev.txt  requirements.txt  tailwind.config.js  test_relative.yaml  tox.ini
.Jules/: palette.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: static.yml  validate.yml
.jules/: bolt.md  sentinel.md
attached_assets/: branding-1777747627079.json  content-1777747627465.md
docs/: COMPARISON.md  RESEARCH_NOTES.md
employee_md.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/: README.md  ai-assistant.md  data-analyst.md  devops-engineer.md  freelancer.md  maton-automation-agent.md  minimal.md  molt-bot-integration.md  product-manager.md  security-auditor.md  senior-dev.md  trading-bot.md  zhc-worker.md
runtime/: __init__.py  cli.py  employee.py  skill_export.py
scripts/: build_static_site.py  post-merge.sh
tests/: conftest.py  test_validator.py
tests/integration/: test_agent_loop.py  test_cli.py  test_config.py
tests/performance/: __init__.py  benchmarks.py  regression.py
tests/unit/: test_base_validator.py  test_cache.py  test_enum_validator.py  test_format_validator.py  test_logging_config.py  test_monitoring.py  test_parser.py  test_range_validator.py  test_required_validator.py  test_runtime.py  test_security.py  test_skill_export.py  test_type_validator.py  test_utils.py  test_web.py
tooling/: __init__.py  cache.py  cli.py  config.py  constants.py  employee_validator.py  logging_config.py  monitoring.py  parser.py  schema.json  strict_schema_check.py  utils.py  validate.py
tooling/validators/: __init__.py  base.py  enums.py  formats.py  ranges.py  required.py  types.py
web/: __init__.py  app.py  spec_doc.py
web/static/: style.css  tailwind.css
web/templates/: base.html  docs.html  example_detail.html  examples.html  index.html  integration.html  integrations.html  runtime.html  spec.html  validate.html  why.html
